--- a/WindMILLDetector2.ipynb
+++ b/WindMILLDetector2.ipynb
@@ -6,7 +6,7 @@
       "name": "WindMILLDetector2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMV8n5uldYMDzSJoh85j22y",
+      "authorship_tag": "ABX9TyNEIGjCiOSIjSO/7Fk1Ukh2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1020,7 +1020,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
+          "height": 328
         },
         "id": "CHt7QrgEi1eE",
         "outputId": "4e7946ad-443a-4154-f0c1-ecd4bd1b997f"
@@ -1047,46 +1047,354 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "cd /content/training_demo/pre-trained-models"
       ],
       "metadata": {
-        "id": "LO-KHzREhWEJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LO-KHzREhWEJ",
+        "outputId": "5c569438-a8a5-47bd-ea72-220c386eefa7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/training_demo/pre-trained-models\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!wget http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_resnet101_v1_fpn_640x640_coco17_tpu-8.tar.gz"
       ],
       "metadata": {
-        "id": "EhfzTN9ShWHQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EhfzTN9ShWHQ",
+        "outputId": "8fac13f8-12ca-4622-f119-52cce0f6a953"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-07-09 12:18:11--  http://download.tensorflow.org/models/object_detection/tf2/20200711/ssd_resnet101_v1_fpn_640x640_coco17_tpu-8.tar.gz\n",
+            "Resolving download.tensorflow.org (download.tensorflow.org)... 74.125.141.128, 2607:f8b0:400c:c06::80\n",
+            "Connecting to download.tensorflow.org (download.tensorflow.org)|74.125.141.128|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 386527459 (369M) [application/x-tar]\n",
+            "Saving to: ‘ssd_resnet101_v1_fpn_640x640_coco17_tpu-8.tar.gz’\n",
+            "\n",
+            "ssd_resnet101_v1_fp 100%[===================>] 368.62M   140MB/s    in 2.6s    \n",
+            "\n",
+            "2022-07-09 12:18:14 (140 MB/s) - ‘ssd_resnet101_v1_fpn_640x640_coco17_tpu-8.tar.gz’ saved [386527459/386527459]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!tar -xvf ssd_resnet101_v1_fpn_640x640_coco17_tpu-8.tar.gz"
       ],
       "metadata": {
-        "id": "qucJdSiqhWJ3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qucJdSiqhWJ3",
+        "outputId": "48cd58b1-3f91-4353-d175-b86ad96efbb6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/checkpoint/\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/checkpoint/checkpoint\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/checkpoint/ckpt-0.index\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/pipeline.config\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/saved_model/\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/saved_model/saved_model.pb\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/saved_model/assets/\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/saved_model/variables/\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001\n",
+            "ssd_resnet101_v1_fpn_640x640_coco17_tpu-8/saved_model/variables/variables.index\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "pwd"
       ],
       "metadata": {
-        "id": "hty3XBrihWMf"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "NnvssA9_5wB2",
+        "outputId": "d07df7b3-13b8-4e59-c026-6fb309298042"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/training_demo/pre-trained-models'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd /content/training_demo\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ouW7z8z5wE5",
+        "outputId": "42e900b3-cc79-4754-b4de-a5a1e9cb8070"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/training_demo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create train data:\n",
+        "!python generate_tfrecord.py -x /content/training_demo/images/train -l /content/training_demo/annotations/label_map.pbtxt -o /content/training_demo/annotations/train.record\n",
+        "\n",
+        "# Create test data:\n",
+        "!python generate_tfrecord.py -x /content/trainingdemo/images/test -l /content/trainingdemo/annotations/label_map.pbtxt -o /content/trainingdemo/annotations/test.record"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NzamtQL85wIX",
+        "outputId": "10306efd-49fb-40b8-9497-a799a6f037bd"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "usage: generate_tfrecord.py [-h] [-i IMAGEDIR] [-o OUTPUTDIR] [-r RATIO] [-x]\n",
+            "generate_tfrecord.py: error: unrecognized arguments: /content/training_demo/images/train -l /content/training_demo/annotations/label_map.pbtxt\n",
+            "usage: generate_tfrecord.py [-h] [-i IMAGEDIR] [-o OUTPUTDIR] [-r RATIO] [-x]\n",
+            "generate_tfrecord.py: error: unrecognized arguments: /content/trainingdemo/images/test -l /content/trainingdemo/annotations/label_map.pbtxt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pwd"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "-eQd2zHP5wNg",
+        "outputId": "16e040d6-5b74-40c3-809f-37dc7f37bbe8"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/training_demo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hty3XBrihWMf",
+        "outputId": "06fcb693-a5d3-458f-f126-0cdb37d64ac3"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " \u001b[0m\u001b[01;34mannotations\u001b[0m/         'export_tflite_graph_tf2 (1).py'   model_main_tf2.py\n",
+            " \u001b[01;34mexported_models\u001b[0m/      generate_tfrecord.py              \u001b[01;34mmodels\u001b[0m/\n",
+            " exporter_main_v2.py   \u001b[01;34mimages\u001b[0m/                           \u001b[01;34mpre-trained-models\u001b[0m/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python model_main_tf2.py --model_dir=/content/training_demo/models/my_ssd_resnet101_v1_fpn --pipeline_config_path=/content/training_demo/models/my_ssd_resnet101_v1_fpn/pipeline.config"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ltKtBn2i_qQk",
+        "outputId": "1566f2c5-b2d8-478b-bb81-ef9246738b69"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python3: can't open file 'model_main_tf2.py': [Errno 2] No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pwd\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "c8e0LCdd_qTE",
+        "outputId": "3396fdc6-8f40-48f4-ffe6-f38b5aad870c"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/training_demo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jFC2Ow-b_qVy",
+        "outputId": "6ed72074-bbd0-40c2-cef2-6b25662d7690"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0m\u001b[01;34mannotations\u001b[0m/         export_tflite_graph_tf2.py  model_main_tf2.py\n",
+            "\u001b[01;34mexported_models\u001b[0m/     generate_tfrecord.py        \u001b[01;34mmodels\u001b[0m/\n",
+            "exporter_main_v2.py  \u001b[01;34mimages\u001b[0m/                     \u001b[01;34mpre-trained-models\u001b[0m/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python model_main_tf2.py --model_dir=/content/training_demo/models/my_ssd_resnet101_v1_fpn --pipeline_config_path=/content/training_demo/models/my_ssd_resnet101_v1_fpn/pipeline.config"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vWB8RNdcDtvm",
+        "outputId": "19abca6d-112b-45d2-d8cc-d2c9ff720d28"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"model_main_tf2.py\", line 32, in <module>\n",
+            "    from object_detection import model_lib_v2\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/object_detection/model_lib_v2.py\", line 29, in <module>\n",
+            "    from object_detection import eval_util\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/object_detection/eval_util.py\", line 36, in <module>\n",
+            "    from object_detection.metrics import lvis_evaluation\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/object_detection/metrics/lvis_evaluation.py\", line 23, in <module>\n",
+            "    from lvis import results as lvis_results\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/lvis/__init__.py\", line 5, in <module>\n",
+            "    from lvis.vis import LVISVis\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/lvis/vis.py\", line 1, in <module>\n",
+            "    import cv2\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/cv2/__init__.py\", line 181, in <module>\n",
+            "    bootstrap()\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/cv2/__init__.py\", line 175, in bootstrap\n",
+            "    if __load_extra_py_code_for_module(\"cv2\", submodule, DEBUG):\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/cv2/__init__.py\", line 28, in __load_extra_py_code_for_module\n",
+            "    py_module = importlib.import_module(module_name)\n",
+            "  File \"/usr/lib/python3.7/importlib/__init__.py\", line 127, in import_module\n",
+            "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/cv2/mat_wrapper/__init__.py\", line 33, in <module>\n",
+            "    cv._registerMatType(Mat)\n",
+            "AttributeError: module 'cv2' has no attribute '_registerMatType'\n"
+          ]
+        }
+      ]
     }
   ]
 }
